<resources>
    <string name="app_name">TVOFaceIDApplication</string>
    <string name="name">Họ và tên:</string>
    <string name="address">Địa chỉ:</string>
    <string name="phone">Số điện thoại:</string>
    <string name="job">Nghề nghiệp:</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="loading_location">Vui lòng chờ...</string>
    <string name="message_get_success">"Xác thực thành công."</string>
    <string name="message_success">"Thành công"</string>
    <string name="message_get_error">"Xác thực thất bại."</string>
    <string name="message_error">"Không thể đăng ký."</string>
    <string name="loading_wifi">Vui lòng chờ...</string>
    <string name="message_get_success_all">"Bạn đã điểm danh thành công."</string>
    <string name="name_employee">Tên nhân viên: </string>
    <string name="loading_add_employee">Đang thêm thành viên ...</string>
    <string name="loading_add_lending">Đang xác nhận ...</string>
    <string name="loading_list_lending">Đang tải danh sách hợp đồng ...</string>
    <string name="error_name">Nhập lại tên khách hàng.</string>
    <string name="error_address">Nhập lại địa chỉ.</string>
    <string name="error_cmnd">Nhập lại số CMND.</string>
    <string name="error_birth_date">Nhập lại ngày sinh.</string>
    <string name="error_image">Thiếu hình ảnh.</string>
    <string name="hdsaison_slogan">Cùng HD SAISON\nđem ước mơ về nhà</string>
    <string name="demo_version">Demo Version</string>
    <string name="time_keeping">Chấm công</string>
    <string name="search_contract">Tra cứu hợp đồng</string>
    <string name="add_new_lending">Tạo khoản vay mới</string>

    <string name="please_login">Vui lòng đăng nhập để sử dụng chức năng.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_lending">LendingFragment</string>
    <string name="fragment_timekeeping">Timekeeping Fragment</string>
    <string name="fragment_search_contract">Search Contract Fragment</string>
    <string name="full_name">Họ tên</string>
    <string name="text_name_example">Nguyễn Hoàng Anh</string>
    <string name="user_code">Mã định danh</string>
    <string name="text_location">Tọa độ GPS</string>
    <string name="text_wifi_name">Định danh Wifi</string>
    <string name="text_inf_user_title">Thông tin nhân viên</string>
    <string name="text_created_time_example">01/12/2019 17:00</string>
    <string name="text_contract_id_example">ED01222166681</string>
    <string name="text_status_example">Trạng thái: Đã duyệt</string>
    <string name="text_enter_contract_id">Nhập mã hợp đồng</string>
    <string name="text_lending_title">Thông tin khoản vay</string>
    <string name="text_motorbike">Xe máy</string>
    <string name="text_loan_purpose">Mục đích vay</string>
    <string name="text_product_title">Sản phẩm</string>
    <string name="text_honda">Honda</string>
    <string name="text_price_32m">32,000,000 đ</string>
    <string name="text_product_price">Giá sản phẩm</string>
    <string name="text_tenor">Thời hạn vay</string>
    <string name="text_6_months">6 tháng</string>
    <string name="text_prepaid_amount">Số tiền trả trước</string>
    <string name="text_10m">10,469,000 đ</string>
    <string name="text_1m">1,469,000 đ</string>
    <string name="text_pair_per_month">Số tiền thanh toán hàng tháng</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="text_contract_number_title">Số hợp đồng</string>
    <string name="text_date_sign_contract_title">Ngày ký hợp đồng</string>
    <string name="text_status_contract_title">Trạng thái hợp đồng</string>
    <string name="text_store_name_title">Tên cửa hàng</string>
    <string name="text_customer_name_title">Tên khách hàng</string>
    <string name="text_birth_date_title">Ngày sinh</string>
    <string name="text_phone_title">Số điện thoại</string>
    <string name="text_cmnd_title">Số CMND</string>
    <string name="text_status_pending">Đang chờ duyệt</string>
    <string name="text_store_name_example">ED HT ĐIỆN MÁY XANH 224</string>
    <string name="text_birth_date_example">12/09/1980</string>
    <string name="text_phone_example">0946228228</string>
    <string name="text_cmnd_example">246881004</string>
    <string name="text_save">Lưu</string>
    <string name="text_saving">Đang lưu dữ liệu…</string>
    <string name="text_create_new">Tạo mới</string>
    <string name="text_check_matching">Phân tích</string>
    <string name="text_matched">Matched</string>
    <string name="text_customer_inf_title">Thông tin cá nhân</string>
    <string name="text_fullname_title"><![CDATA[Họ & tên]]></string>
    <string name="text_address_title">Địa chỉ</string>

    <string name="dialog_checking_user_inf">Đang xác thực hình ảnh…</string>
    <string name="dialog_loading_location">Đang lấy dữ liệu vị trí…</string>
    <string name="dialog_checking_location">Đang kiểm tra vị trí…</string>
    <string name="dialog_checking_wifi_ssid">Đang kiểm tra wifi…</string>

    <string name="dialog_success_time_keeping_success">Chấm công thành công</string>
    <string name="dialog_success_time_keeping_fail">Chấm công thất bại</string>

    <string name="text_time_keeping_success_before">Bạn đã chấm công thành công.</string>

    <string name="dialog_create_lending">Đang tạo dữ liệu khoản vay…</string>
    <string name="dialog_processing_image">Đang kiểm tra dữ liệu hình ảnh…</string>

    <string name="text_close_title">Đóng</string>
    <string name="text_try_again_title">Thử lại</string>
    <string name="text_notify_title">Thông báo</string>
    <string name="text_notification_outside_checkin">Bạn đã ra khỏi khu vực chấm công</string>
    <string name="text_notification_inside_checkin">Bạn đã vào khu vực chấm công</string>
    <string name="text_send_title">Send</string>
    <string name="text_take_picture_title">Take picture</string>
    <string name="text_face_check_title">Face check</string>

    <string name="text_fail_detach_data">Không thể detach dữ liệu</string>
    <string name="text_picture_1">Picture 1</string>
    <string name="text_picture_2">Picture 2</string>
    <string name="text_check_face_identical">Check Face Identical</string>
    <string name="text_error_title">Error</string>
    <string name="text_error_cant_call_api">Can not connect to API…</string>
    <string name="text_add_employee_title">Add Employee</string>
    <string name="text_list_employee_title">List Employee</string>
    <string name="text_agree_title">Đồng ý</string>


</resources>
