<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin_small"
    android:background="@drawable/border_radius_linearlayout"
    android:orientation="vertical"
    android:padding="@dimen/default_padding_medium">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_small"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/detail_contract_customer_name_title"
            style="@style/CustomTextview_Contract_Des"
            android:text="@string/text_customer_name_title" />

        <TextView
            android:id="@+id/detail_contract_customer_name"
            style="@style/CustomTextview_Contract_2"
            android:layout_toEndOf="@id/detail_contract_customer_name_title"
            android:text="@string/text_name_example"
            android:textAlignment="textEnd" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_small"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/detail_contract_birth_date_title"
            style="@style/CustomTextview_Contract_Des"
            android:text="@string/text_birth_date_title" />

        <TextView
            android:id="@+id/detail_contract_customer_birth_date"
            style="@style/CustomTextview_Contract_2"
            android:layout_toEndOf="@id/detail_contract_birth_date_title"
            android:text="@string/text_birth_date_example"
            android:textAlignment="textEnd" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_small"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/detail_contract_phone_title"
            style="@style/CustomTextview_Contract_Des"
            android:text="@string/text_phone_title" />

        <TextView
            android:id="@+id/detail_contract_customer_phone"
            style="@style/CustomTextview_Contract_2"
            android:layout_toEndOf="@id/detail_contract_phone_title"
            android:text="@string/text_phone_example"
            android:textAlignment="textEnd" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/detail_contract_cmnd_title"
            style="@style/CustomTextview_Contract_Des"
            android:text="@string/text_cmnd_title" />

        <TextView
            android:id="@+id/detail_contract_customer_cmnd"
            style="@style/CustomTextview_Contract_2"
            android:layout_toEndOf="@id/detail_contract_cmnd_title"
            android:text="@string/text_cmnd_example"
            android:textAlignment="textEnd" />

    </RelativeLayout>

</LinearLayout>