<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.test_api.TestFaceCheckActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_picture_face_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_picture_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_picture_face_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_picture_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_face_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/default_padding_small"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/iv_face_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/default_padding_small"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check_face_identical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_check_face_identical" />

        <TextView
            android:id="@+id/tv_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding_medium"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</RelativeLayout>